--- a/giraffe.html
+++ b/giraffe.html
@@ -17,13 +17,12 @@
         <div id="main">
             <div id="content">
                 <div id="info-box-full">
-                    <img src="images/garden-amphitheater.jpg" />
-                    <h3>AMPHITHEATER</h3>
+                    <img src="images/giraffe-large.jpg" />
+                    <h3>GIRAFFE</h3>
                     <p>
                         jkjljalkjkldajkdljsakdjkasjdkjslkdjsakldjksjadklja
                         asakdlsklkdlkaskdlksadlkslkdlsjdkjsakdjsakdjalkjdkjsaljdkjsadl
-                        jksajdkjksajdkjsakjdkjsakjdkjaskldjlajsdkjaldjkasjdkjaskdjkasjd
-                        kljska
+                        jksajdkjksajdkjsakjdkjsakjdkjaskldjlajsdkjaldjkasjdkjaskdjkasjd kljska
                         jdkjaskdjksajdlkjakdjakjsdkjlajdkljasdkjsakjdjalskdjasjdljsdd
                         asdkjkdjskdjajdjhaskdhjashdjkhasdkjhaksdjs
                         dsjdhjsdhkahdjkhasjdkhsajdhkjsahdjkhakdhjahdkjahsjhskajhd
@@ -33,20 +32,16 @@
                         jkjljalkjkldajkdljsakdjkasjdkjslkdjsakldjksjadklja
                         asakdlsklkdlkaskdlksadlkslkdlsjdkjsakdjsakdjalkjdkjsaljdkjsadl
                         jksajdkjksajdkjsakjdkjsakjdkjaskldjlajsdkjaldjkasjdkjaskdjkasjdk
-                        ljskajdkjaskdjksajdlkjakdjakjsdkjlajdkljasdkjsakjdjalskdjasjd
-                        ljsdd
+                        ljskajdkjaskdjksajdlkjakdjakjsdkjlajdkljasdkjsakjdjalskdjasjd ljsdd
                         asdkjkdjskdjajdjhaskdhjashdjkhasdkjhaksdjs
                         dsjdhjsdhkahdjkhasjdkhsajdhkjsahdjkhakdhjahdkjahsjhskajhd
                         dadadjahdhadhkjahdjahdkjhajdhhuhahdbbchacjhacha sahuahsdjhahjd
                     </p>
                     <p>
                         jkjljalkjkldajkdljsakdjkasjdkjslkdjsakldjksjadklja
-                        asakdlsklkdlkaskdlksadlkslkdlsjdkjsakdjsakdjalkjdk
-                        jsaljdkjsadljksajdkjksajdkj
-                        sakjdkjsakjdkjaskldjlajsdkjaldjkasjdkjaskdjkasjdk
-                        ljskajdkjaskdjksajdlkjakdjakjsdkjlaj
-                        dkljasdkjsakjdjalskdjasjdljsdd
-                        asdkjkdjskdjajdjhaskdhjashdjkhasdkjhaksdjs
+                        asakdlsklkdlkaskdlksadlkslkdlsjdkjsakdjsakdjalkjdk jsaljdkjsadljksajdkjksajdkj
+                        sakjdkjsakjdkjaskldjlajsdkjaldjkasjdkjaskdjkasjdk ljskajdkjaskdjksajdlkjakdjakjsdkjlaj
+                        dkljasdkjsakjdjalskdjasjdljsdd asdkjkdjskdjajdjhaskdhjashdjkhasdkjhaksdjs
                         dsjdhjsdhkahdjkhasjdkhsajdhkjsahdjkhakdhjahdkjahsjhskajhd
                         dadadjahdhadhkjahdjahdkjhajdhhuhahdbbchacjhacha sahuahsdjhahjd
                     </p>
