--- a/places.html
+++ b/places.html
@@ -16,10 +16,39 @@
 		</div>
 		<div id="main">
 			<div id="content">
-				<a class="infobox" href="#">
+				<a class="infobox" href="amphitheater.html">
 					<img class="right" src="images/next-arrow.png" />
 					<img src="images/amphitheatre-tn.png" />
 					<h3>AMPHITHEATER</h3>
+					<p>Catch an educational and entertaining event</p> </a
+				><a class="infobox" href="coffeeshop.html">
+					<img class="right" src="images/next-arrow.png" />
+					<img src="images/coffee-shop-tn.png" />
+					<h3>COFFEE SHOP</h3>
+					<p>Catch an educational and entertaining event</p>
+				</a>
+				<a class="infobox" href="pizzashop.html">
+					<img class="right" src="images/next-arrow.png" />
+					<img src="images/pizza-shop-tn.png" />
+					<h3>MOS PIZZA</h3>
+					<p>Catch an educational and entertaining event</p>
+				</a>
+				<a class="infobox" href="lostforest.html">
+					<img class="right" src="images/next-arrow.png" />
+					<img src="images/lost-forest-tn.png" />
+					<h3>LOST FOREST</h3>
+					<p>Catch an educational and entertaining event</p>
+				</a>
+				<a class="infobox" href="monkeytrail.html">
+					<img class="right" src="images/next-arrow.png" />
+					<img src="images/monkey-trail-tn.png" />
+					<h3>MONKEY TRAIL</h3>
+					<p>Catch an educational and entertaining event</p>
+				</a>
+				<a class="infobox" href="resturant.html">
+					<img class="right" src="images/next-arrow.png" />
+					<img src="images/restaurant-tn.png" />
+					<h3>OUTSIDE RESTURANT</h3>
 					<p>Catch an educational and entertaining event</p>
 				</a>
 			</div>
