--- a/animals.html
+++ b/animals.html
@@ -22,49 +22,49 @@
                     <h3>ELIPHANTS</h3>
                     <p>Gentle giants of the jungle</p>
                 </a>
-                <a class="infobox" href="#">
+                <a class="infobox" href="gemsboks.html">
                     <img class="right" src="images/next-arrow.png" />
                     <img src="images/gemsbok-tn.png" />
                     <h3>GEMSBOKS</h3>
                     <p>come and see the majestic gemsboks</p>
                 </a>
-                <a class="infobox" href="#">
+                <a class="infobox" href="giraffe.html">
                     <img class="right" src="images/next-arrow.png" />
                     <img src="images/giraffe-tn.png" />
                     <h3>GIRAFFE</h3>
                     <p>come and see the majestic giraffe</p>
                 </a>
-                <a class="infobox" href="#">
+                <a class="infobox" href="gorilla.html">
                     <img class="right" src="images/next-arrow.png" />
                     <img src="images/gorilla-tn.png" />
                     <h3>GORILLA</h3>
                     <p>Kong the gorilla is much friendlier then the looks</p>
                 </a>
-                <a class="infobox" href="#">
+                <a class="infobox" href="koala.html">
                     <img class="right" src="images/next-arrow.png" />
                     <img src="images/koala-tn.png" />
                     <h3>KOALA</h3>
                     <p>come take a look at the cute koala</p>
                 </a>
-                <a class="infobox" href="#">
+                <a class="infobox" href="lion.html">
                     <img class="right" src="images/next-arrow.png" />
                     <img src="images/lion-tn.png" />
                     <h3>LION</h3>
                     <p>The king of the jungle await your visit</p>
                 </a>
-                <a class="infobox" href="#">
+                <a class="infobox" href="monkey.html">
                     <img class="right" src="images/next-arrow.png" />
                     <img src="images/monkey-tn.png" />
                     <h3>MONKEY</h3>
                     <p>Playful monkeys are cleverer then you think</p>
                 </a>
-                <a class="infobox" href="#">
+                <a class="infobox" href="panda.html">
                     <img class="right" src="images/next-arrow.png" />
                     <img src="images/panda-tn.png" />
                     <h3>PANDER</h3>
                     <p>The panda seems to be everyones favorite!</p>
                 </a>
-                <a class="infobox" href="#">
+                <a class="infobox" href="wartog.html">
                     <img class="right" src="images/next-arrow.png" />
                     <img src="images/warthog-tn.png" />
                     <h3>WARTOG</h3>
