--- a/resturant.html
+++ b/resturant.html
@@ -17,8 +17,8 @@
         <div id="main">
             <div id="content">
                 <div id="info-box-full">
-                    <img src="images/garden-amphitheater.jpg" />
-                    <h3>AMPHITHEATER</h3>
+                    <img src="images/outdoor_restaurant.jpg"/>
+                    <h3>OUTSIDE RESTURANT</h3>
                     <p>
                         jkjljalkjkldajkdljsakdjkasjdkjslkdjsakldjksjadklja
                         asakdlsklkdlkaskdlksadlkslkdlsjdkjsakdjsakdjalkjdkjsaljdkjsadl
