--- a/wartog.html
+++ b/wartog.html
@@ -20,35 +20,24 @@
                     <img src="images/warthog.jpg" />
                     <h3>WARTOG</h3>
                     <p>
-                        jkjljalkjkldajkdljsakdjkasjdkjslkdjsakldjksjadklja
-                        asakdlsklkdlkaskdlksadlkslkdlsjdkjsakdjsakdjalkjdkjsaljdkjsadl
-                        jksajdkjksajdkjsakjdkjsakjdkjaskldjlajsdkjaldjkasjdkjaskdjkasjd
-                        kljska
-                        jdkjaskdjksajdlkjakdjakjsdkjlajdkljasdkjsakjdjalskdjasjdljsdd
-                        asdkjkdjskdjajdjhaskdhjashdjkhasdkjhaksdjs
-                        dsjdhjsdhkahdjkhasjdkhsajdhkjsahdjkhakdhjahdkjahsjhskajhd
-                        dadadjahdhadhkjahdjahdkjhajdhhuhahdbbchacjhacha sahuahsdjhahjd
+                        Phacochoerus is a genus in the family Suidae, commonly known as warthogs (pronounced wart-hog).
+                        They are pigs who live in open and semi-open habitats, even in quite arid regions, in
+                        sub-Saharan Africa. The two species were formerly considered conspecific under the scientific
+                        name Phacochoerus aethiopicus, but today this is limited to the desert warthog, while the
+                        best-known and most widespread species, the common warthog (or simply warthog), is Phacochoerus
+                        africanus.
                     </p>
                     <p>
-                        jkjljalkjkldajkdljsakdjkasjdkjslkdjsakldjksjadklja
-                        asakdlsklkdlkaskdlksadlkslkdlsjdkjsakdjsakdjalkjdkjsaljdkjsadl
-                        jksajdkjksajdkjsakjdkjsakjdkjaskldjlajsdkjaldjkasjdkjaskdjkasjdk
-                        ljskajdkjaskdjksajdlkjakdjakjsdkjlajdkljasdkjsakjdjalskdjasjd
-                        ljsdd
-                        asdkjkdjskdjajdjhaskdhjashdjkhasdkjhaksdjs
-                        dsjdhjsdhkahdjkhasjdkhsajdhkjsahdjkhakdhjahdkjahsjhskajhd
-                        dadadjahdhadhkjahdjahdkjhajdhhuhahdbbchacjhacha sahuahsdjhahjd
+                        Aper Pallas, 1766 Dinochoerus Gloger, 1841 Eureodon G. Fischer von Waldheim, 1817 Macrocephalus
+                        Frisch, 1775 Macrocephalus Palmer, 1904 Phacellochaerus Hemprich & Ehrenberg, 1832
+                        Phacellochoerus Hemprich & Ehrenberg, 1832 Phacochaeres Gray, 1821 Phacocherus Fleming, 1822
+                        Phacochoerus G. Cuvier, 1816 Phascochaeres Cretzschmar, 1828 Phascochaerus Desmarest, 1822
+                        Phascochoeres Ranzani, 1821 Phascochoerus Ranzani, 1821
                     </p>
                     <p>
-                        jkjljalkjkldajkdljsakdjkasjdkjslkdjsakldjksjadklja
-                        asakdlsklkdlkaskdlksadlkslkdlsjdkjsakdjsakdjalkjdk
-                        jsaljdkjsadljksajdkjksajdkj
-                        sakjdkjsakjdkjaskldjlajsdkjaldjkasjdkjaskdjkasjdk
-                        ljskajdkjaskdjksajdlkjakdjakjsdkjlaj
-                        dkljasdkjsakjdjalskdjasjdljsdd
-                        asdkjkdjskdjajdjhaskdhjashdjkhasdkjhaksdjs
-                        dsjdhjsdhkahdjkhasjdkhsajdhkjsahdjkhakdhjahdkjahsjhskajhd
-                        dadadjahdhadhkjahdjahdkjhajdhhuhahdbbchacjhacha sahuahsdjhahjd
+                        Size: A head-and-body length ranging from 0.9 to 1.5 m (2 ft 11 in to 4 ft 11 in), and shoulder
+                        height from 63.5 to 85 cm (25.0 to 33.5 in). Females, at 45 to 75 kg (99 to 165 lb), are smaller
+                        and lighter than males, at 60 to 150 kg (130 to 330 lb).
                     </p>
                 </div>
             </div>
