--- a/gemsboks.html
+++ b/gemsboks.html
@@ -20,30 +20,27 @@
                     <img src="images/gemsbok.jpg" />
                     <h3>GEMSBOK</h3>
                     <p>
-                        jkjljalkjkldajkdljsakdjkasjdkjslkdjsakldjksjadklja
-                        asakdlsklkdlkaskdlksadlkslkdlsjdkjsakdjsakdjalkjdkjsaljdkjsadl
-                        jksajdkjksajdkjsakjdkjsakjdkjaskldjlajsdkjaldjkasjdkjaskdjkasjd kljska
-                        jdkjaskdjksajdlkjakdjakjsdkjlajdkljasdkjsakjdjalskdjasjdljsdd
-                        asdkjkdjskdjajdjhaskdhjashdjkhasdkjhaksdjs
-                        dsjdhjsdhkahdjkhasjdkhsajdhkjsahdjkhakdhjahdkjahsjhskajhd
-                        dadadjahdhadhkjahdjahdkjhajdhhuhahdbbchacjhacha sahuahsdjhahjd
+                        Gemsbok are light taupe to tan in color, with lighter patches toward the bottom rear of the
+                        rump. Their tails are long and black in color. A blackish stripe extends from the chin down the
+                        lower edge of the neck, through the juncture of the shoulder and leg along the lower flank of
+                        each side to the blackish section of the rear leg. They have muscular necks and shoulders, and
+                        their legs have white 'socks' with a black patch on the front of both the front legs, and both
+                        sexes have long, straight horns. Comparably, the East African oryx lacks a dark patch at the
+                        base of the tail, has less black on the legs (none on the hindlegs), and less black on the lower
+                        flanks. One very rare color morph is the "golden oryx", in which the gemsbok's black markings
+                        are muted and appear to be golden
                     </p>
                     <p>
-                        jkjljalkjkldajkdljsakdjkasjdkjslkdjsakldjksjadklja
-                        asakdlsklkdlkaskdlksadlkslkdlsjdkjsakdjsakdjalkjdkjsaljdkjsadl
-                        jksajdkjksajdkjsakjdkjsakjdkjaskldjlajsdkjaldjkasjdkjaskdjkasjdk
-                        ljskajdkjaskdjksajdlkjakdjakjsdkjlajdkljasdkjsakjdjalskdjasjd ljsdd
-                        asdkjkdjskdjajdjhaskdhjashdjkhasdkjhaksdjs
-                        dsjdhjsdhkahdjkhasjdkhsajdhkjsahdjkhakdhjahdkjahsjhskajhd
-                        dadadjahdhadhkjahdjahdkjhajdhhuhahdbbchacjhacha sahuahsdjhahjd
+                        Gemsbok are the largest species in the genus Oryx. They stand about 1.2 m (4 ft) at the
+                        shoulder.[7][8] The body length can vary from 190 to 240 cm (75 to 94 in) and the tail measures
+                        45 to 90 cm (18 to 35 in).[9] Male gemsbok can weigh between 180 and 240 kg (400 and 530 lb),
+                        while females weigh 100–210 kg (220–460 lb).
                     </p>
                     <p>
-                        jkjljalkjkldajkdljsakdjkasjdkjslkdjsakldjksjadklja
-                        asakdlsklkdlkaskdlksadlkslkdlsjdkjsakdjsakdjalkjdk jsaljdkjsadljksajdkjksajdkj
-                        sakjdkjsakjdkjaskldjlajsdkjaldjkasjdkjaskdjkasjdk ljskajdkjaskdjksajdlkjakdjakjsdkjlaj
-                        dkljasdkjsakjdjalskdjasjdljsdd asdkjkdjskdjajdjhaskdhjashdjkhasdkjhaksdjs
-                        dsjdhjsdhkahdjkhasjdkhsajdhkjsahdjkhakdhjahdkjahsjhskajhd
-                        dadadjahdhadhkjahdjahdkjhajdhhuhahdbbchacjhacha sahuahsdjhahjd
+                        Gemsbok are widely hunted for their spectacular horns that average 85 cm (33 in) in length. From
+                        a distance, the only outward difference between males and females is their horns, and many
+                        hunters mistake females for males each year. In males horns tend to be thicker with larger
+                        bases. Females have slightly longer, thinner horns.
                     </p>
                 </div>
             </div>
