--- a/giraffe.html
+++ b/giraffe.html
@@ -20,30 +20,29 @@
                     <img src="images/giraffe-large.jpg" />
                     <h3>GIRAFFE</h3>
                     <p>
-                        jkjljalkjkldajkdljsakdjkasjdkjslkdjsakldjksjadklja
-                        asakdlsklkdlkaskdlksadlkslkdlsjdkjsakdjsakdjalkjdkjsaljdkjsadl
-                        jksajdkjksajdkjsakjdkjsakjdkjaskldjlajsdkjaldjkasjdkjaskdjkasjd kljska
-                        jdkjaskdjksajdlkjakdjakjsdkjlajdkljasdkjsakjdjalskdjasjdljsdd
-                        asdkjkdjskdjajdjhaskdhjashdjkhasdkjhaksdjs
-                        dsjdhjsdhkahdjkhasjdkhsajdhkjsahdjkhakdhjahdkjahsjhskajhd
-                        dadadjahdhadhkjahdjahdkjhajdhhuhahdbbchacjhacha sahuahsdjhahjd
+                        The giraffe is a large African hoofed mammal belonging to the genus Giraffa. It is the tallest
+                        living terrestrial animal and the largest ruminant on Earth. Traditionally, giraffes have been
+                        thought of as one species, Giraffa camelopardalis, with nine subspecies. Most recently,
+                        researchers proposed dividing them into four extant species due to new research into their
+                        mitochondrial and nuclear DNA, and individual species can be distinguished by their fur coat
+                        patterns. Six valid extinct species of Giraffa from Africa and Pakistan are known from the
+                        fossil record.
                     </p>
                     <p>
-                        jkjljalkjkldajkdljsakdjkasjdkjslkdjsakldjksjadklja
-                        asakdlsklkdlkaskdlksadlkslkdlsjdkjsakdjsakdjalkjdkjsaljdkjsadl
-                        jksajdkjksajdkjsakjdkjsakjdkjaskldjlajsdkjaldjkasjdkjaskdjkasjdk
-                        ljskajdkjaskdjksajdlkjakdjakjsdkjlajdkljasdkjsakjdjalskdjasjd ljsdd
-                        asdkjkdjskdjajdjhaskdhjashdjkhasdkjhaksdjs
-                        dsjdhjsdhkahdjkhasjdkhsajdhkjsahdjkhakdhjahdkjahsjhskajhd
-                        dadadjahdhadhkjahdjahdkjhajdhhuhahdbbchacjhacha sahuahsdjhahjd
+                        The giraffe's distinguishing characteristics are its extremely long neck and legs, horn-like
+                        ossicones, and spotted coat patterns. It is classified under the family Giraffidae, along with
+                        its closest extant relative, the okapi. Its scattered range extends from Chad in the north to
+                        South Africa in the south and from Niger in the west to Somalia in the east. Giraffes usually
+                        inhabit savannahs and woodlands. Their food source is leaves, fruits, and flowers of woody
+                        plants, primarily acacia species, which they browse at heights most other ground-based
+                        herbivores cannot reach.
                     </p>
                     <p>
-                        jkjljalkjkldajkdljsakdjkasjdkjslkdjsakldjksjadklja
-                        asakdlsklkdlkaskdlksadlkslkdlsjdkjsakdjsakdjalkjdk jsaljdkjsadljksajdkjksajdkj
-                        sakjdkjsakjdkjaskldjlajsdkjaldjkasjdkjaskdjkasjdk ljskajdkjaskdjksajdlkjakdjakjsdkjlaj
-                        dkljasdkjsakjdjalskdjasjdljsdd asdkjkdjskdjajdjhaskdhjashdjkhasdkjhaksdjs
-                        dsjdhjsdhkahdjkhasjdkhsajdhkjsahdjkhakdhjahdkjahsjhskajhd
-                        dadadjahdhadhkjahdjahdkjhajdhhuhahdbbchacjhacha sahuahsdjhahjd
+                        Lions, leopards, spotted hyenas, and African wild dogs may prey upon giraffes. Giraffes live in
+                        herds of related females and their offspring or bachelor herds of unrelated adult males but are
+                        gregarious and may gather in large groups. Males establish social hierarchies through "necking",
+                        combat bouts where the neck is used as a weapon. Dominant males gain mating access to females,
+                        which bear sole responsibility for rearing the young.
                     </p>
                 </div>
             </div>
