--- a/monkey.html
+++ b/monkey.html
@@ -20,35 +20,25 @@
                     <img src="images/monkey.jpg" />
                     <h3>MONKEYS</h3>
                     <p>
-                        jkjljalkjkldajkdljsakdjkasjdkjslkdjsakldjksjadklja
-                        asakdlsklkdlkaskdlksadlkslkdlsjdkjsakdjsakdjalkjdkjsaljdkjsadl
-                        jksajdkjksajdkjsakjdkjsakjdkjaskldjlajsdkjaldjkasjdkjaskdjkasjd
-                        kljska
-                        jdkjaskdjksajdlkjakdjakjsdkjlajdkljasdkjsakjdjalskdjasjdljsdd
-                        asdkjkdjskdjajdjhaskdhjashdjkhasdkjhaksdjs
-                        dsjdhjsdhkahdjkhasjdkhsajdhkjsahdjkhakdhjahdkjahsjhskajhd
-                        dadadjahdhadhkjahdjahdkjhajdhhuhahdbbchacjhacha sahuahsdjhahjd
+                        Monkey is a common name that may refer to most mammals of the infraorder Simiiformes, also known
+                        as simians. Traditionally, all animals in the group now known as simians are counted as monkeys
+                        except the apes. Thus monkeys, in that sense, constitute an incomplete paraphyletic grouping;
+                        alternatively, if apes (Hominoidea) are included, monkeys and simians are synonyms.
                     </p>
                     <p>
-                        jkjljalkjkldajkdljsakdjkasjdkjslkdjsakldjksjadklja
-                        asakdlsklkdlkaskdlksadlkslkdlsjdkjsakdjsakdjalkjdkjsaljdkjsadl
-                        jksajdkjksajdkjsakjdkjsakjdkjaskldjlajsdkjaldjkasjdkjaskdjkasjdk
-                        ljskajdkjaskdjksajdlkjakdjakjsdkjlajdkljasdkjsakjdjalskdjasjd
-                        ljsdd
-                        asdkjkdjskdjajdjhaskdhjashdjkhasdkjhaksdjs
-                        dsjdhjsdhkahdjkhasjdkhsajdhkjsahdjkhakdhjahdkjahsjhskajhd
-                        dadadjahdhadhkjahdjahdkjhajdhhuhahdbbchacjhacha sahuahsdjhahjd
+                        In 1812, Étienne Geoffroy grouped the apes and the Cercopithecidae group of monkeys together and
+                        established the name Catarrhini, "Old World monkeys" ("singes de l'Ancien Monde" in
+                        French).[3][4][5] The extant sister of the Catarrhini in the monkey ("singes") group is the
+                        Platyrrhini (New World monkeys).[3] Some nine million years before the divergence between the
+                        Cercopithecidae and the apes,[6] the Platyrrhini emerged within "monkeys" by migration to South
+                        America from Afro-Arabia (the Old World),[citation needed][7][8] likely by ocean.[9][10][better
+                        source needed] Apes are thus deep in the tree of extant and extinct monkeys, and any of the apes
+                        is distinctly closer related to the Cercopithecidae than the Platyrrhini are.
                     </p>
                     <p>
-                        jkjljalkjkldajkdljsakdjkasjdkjslkdjsakldjksjadklja
-                        asakdlsklkdlkaskdlksadlkslkdlsjdkjsakdjsakdjalkjdk
-                        jsaljdkjsadljksajdkjksajdkj
-                        sakjdkjsakjdkjaskldjlajsdkjaldjkasjdkjaskdjkasjdk
-                        ljskajdkjaskdjksajdlkjakdjakjsdkjlaj
-                        dkljasdkjsakjdjalskdjasjdljsdd
-                        asdkjkdjskdjajdjhaskdhjashdjkhasdkjhaksdjs
-                        dsjdhjsdhkahdjkhasjdkhsajdhkjsahdjkhakdhjahdkjahsjhskajhd
-                        dadadjahdhadhkjahdjahdkjhajdhhuhahdbbchacjhacha sahuahsdjhahjd
+                        Many monkey species are tree-dwelling (arboreal), although there are species that live primarily
+                        on the ground, such as baboons. Most species are mainly active during the day (diurnal). Monkeys
+                        are generally considered to be intelligent, especially the Old World monkeys.
                     </p>
                 </div>
             </div>
