--- a/feedback.html
+++ b/feedback.html
@@ -20,10 +20,10 @@
                     <img src="images/giraffe-large.jpg" />
                     <h3>WE'D LOVE TO HEAR FORM YOU!</h3>
                     <p>We always strive to be better, so you feedback is important to us.</p>
-                    <input type="text" placeholder="your name" id="name"/>
-                    <input type="email" placeholder="email" id="email"/>
-                    <textarea placeholder="type your message"></textarea>
-                    <a class="button" href=message-recived.html >SUBMIT</a>
+                    <input type="text" placeholder="your name" required id="name" />
+                    <input type="email" placeholder="email" id="email" reqired />
+                    <textarea placeholder="type your message" required></textarea>
+                    <a class="button" href="message-recived.html">SUBMIT</a>
                 </div>
             </div>
         </div>
