--- a/amphitheater.html
+++ b/amphitheater.html
@@ -20,42 +20,33 @@
                     <img src="images/garden-amphitheater.jpg" />
                     <h3>AMPHITHEATER</h3>
                     <p>
-                        jkjljalkjkldajkdljsakdjkasjdkjslkdjsakldjksjadklja
-                        asakdlsklkdlkaskdlksadlkslkdlsjdkjsakdjsakdjalkjdkjsaljdkjsadl
-                        jksajdkjksajdkjsakjdkjsakjdkjaskldjlajsdkjaldjkasjdkjaskdjkasjd
-                        kljska
-                        jdkjaskdjksajdlkjakdjakjsdkjlajdkljasdkjsakjdjalskdjasjdljsdd
-                        asdkjkdjskdjajdjhaskdhjashdjkhasdkjhaksdjs
-                        dsjdhjsdhkahdjkhasjdkhsajdhkjsahdjkhakdhjahdkjahsjhskajhd
-                        dadadjahdhadhkjahdjahdkjhajdhhuhahdbbchacjhacha sahuahsdjhahjd
+                        is a premier open-air performance venue designed to bring communities together through
+                        unforgettable live entertainment. With its iconic architecture and tiered seating, the
+                        Amphitheater offers a unique blend of historical inspiration and modern design, creating the
+                        perfect atmosphere for concerts, theatrical productions, festivals, and cultural gatherings.
+                        Whether under the stars or during a sunlit afternoon, every event held here becomes a vivid,
+                        shared experience.
                     </p>
                     <p>
-                        jkjljalkjkldajkdljsakdjkasjdkjslkdjsakldjksjadklja
-                        asakdlsklkdlkaskdlksadlkslkdlsjdkjsakdjsakdjalkjdkjsaljdkjsadl
-                        jksajdkjksajdkjsakjdkjsakjdkjaskldjlajsdkjaldjkasjdkjaskdjkasjdk
-                        ljskajdkjaskdjksajdlkjakdjakjsdkjlajdkljasdkjsakjdjalskdjasjd
-                        ljsdd
-                        asdkjkdjskdjajdjhaskdhjashdjkhasdkjhaksdjs
-                        dsjdhjsdhkahdjkhasjdkhsajdhkjsahdjkhakdhjahdkjahsjhskajhd
-                        dadadjahdhadhkjahdjahdkjhajdhhuhahdbbchacjhacha sahuahsdjhahjd
+                        Strategically located in a scenic environment, the Amphitheater is equipped with
+                        state-of-the-art acoustics, lighting systems, and stage facilities to accommodate a wide range
+                        of performances — from intimate acoustic sets to full-scale productions. Its spacious layout
+                        supports both large crowds and cozy gatherings, making it a versatile choice for artists,
+                        promoters, and audiences alike. The venue also offers accessible seating, ample parking, and a
+                        variety of food and beverage options to enhance the guest experience.
                     </p>
                     <p>
-                        jkjljalkjkldajkdljsakdjkasjdkjslkdjsakldjksjadklja
-                        asakdlsklkdlkaskdlksadlkslkdlsjdkjsakdjsakdjalkjdk
-                        jsaljdkjsadljksajdkjksajdkj
-                        sakjdkjsakjdkjaskldjlajsdkjaldjkasjdkjaskdjkasjdk
-                        ljskajdkjaskdjksajdlkjakdjakjsdkjlaj
-                        dkljasdkjsakjdjalskdjasjdljsdd
-                        asdkjkdjskdjajdjhaskdhjashdjkhasdkjhaksdjs
-                        dsjdhjsdhkahdjkhasjdkhsajdhkjsahdjkhakdhjahdkjahsjhskajhd
-                        dadadjahdhadhkjahdjahdkjhajdhhuhahdbbchacjhacha sahuahsdjhahjd
+                        More than just a venue, the Amphitheater is a cultural hub and a symbol of artistic expression.
+                        It regularly partners with local artists, schools, and nonprofits to promote arts education and
+                        community development. With a mission to inspire, entertain, and connect, the Amphitheater
+                        continues to be a beloved landmark where creativity comes alive and memories are made.
                     </p>
                 </div>
             </div>
         </div>
         <div id="tabs-bottom">
-            <a href="#">FEEDBACK</a>
-            <a href="#">WEATHER</a>
+            <a href="feedback.html">FEEDBACK</a>
+            <a href="weather.html">WEATHER</a>
         </div>
     </body>
 </html>
