--- a/coffeeshop.html
+++ b/coffeeshop.html
@@ -20,42 +20,32 @@
                     <img src="images/coffee-shop.jpg" />
                     <h3>COFFEE SHOP</h3>
                     <p>
-                        jkjljalkjkldajkdljsakdjkasjdkjslkdjsakldjksjadklja
-                        asakdlsklkdlkaskdlksadlkslkdlsjdkjsakdjsakdjalkjdkjsaljdkjsadl
-                        jksajdkjksajdkjsakjdkjsakjdkjaskldjlajsdkjaldjkasjdkjaskdjkasjd
-                        kljska
-                        jdkjaskdjksajdlkjakdjakjsdkjlajdkljasdkjsakjdjalskdjasjdljsdd
-                        asdkjkdjskdjajdjhaskdhjashdjkhasdkjhaksdjs
-                        dsjdhjsdhkahdjkhasjdkhsajdhkjsahdjkhakdhjahdkjahsjhskajhd
-                        dadadjahdhadhkjahdjahdkjhajdhhuhahdbbchacjhacha sahuahsdjhahjd
+                        At the heart of our community, [Coffee Shop Name] is more than just a place to grab your daily
+                        cup of coffee — it’s where comfort meets connection. Founded with a passion for quality brews
+                        and warm hospitality, our shop is designed to feel like a second home, offering a cozy space for
+                        early risers, remote workers, students, and coffee lovers of all kinds. Every cup is crafted
+                        with care using ethically sourced beans, locally roasted to bring out the rich flavors that
+                        define us.
                     </p>
                     <p>
-                        jkjljalkjkldajkdljsakdjkasjdkjslkdjsakldjksjadklja
-                        asakdlsklkdlkaskdlksadlkslkdlsjdkjsakdjsakdjalkjdkjsaljdkjsadl
-                        jksajdkjksajdkjsakjdkjsakjdkjaskldjlajsdkjaldjkasjdkjaskdjkasjdk
-                        ljskajdkjaskdjksajdlkjakdjakjsdkjlajdkljasdkjsakjdjalskdjasjd
-                        ljsdd
-                        asdkjkdjskdjajdjhaskdhjashdjkhasdkjhaksdjs
-                        dsjdhjsdhkahdjkhasjdkhsajdhkjsahdjkhakdhjahdkjahsjhskajhd
-                        dadadjahdhadhkjahdjahdkjhajdhhuhahdbbchacjhacha sahuahsdjhahjd
+                        We take pride in curating a menu that balances classic coffee favorites with unique seasonal
+                        specials, artisanal teas, and fresh pastries baked daily. Whether you're sipping on a velvety
+                        cappuccino, indulging in our signature cold brew, or treating yourself to a buttery croissant,
+                        each visit is an invitation to slow down and savor the moment. Our baristas are not just skilled
+                        — they’re passionate storytellers who love sharing the journey of every bean and blend.
                     </p>
                     <p>
-                        jkjljalkjkldajkdljsakdjkasjdkjslkdjsakldjksjadklja
-                        asakdlsklkdlkaskdlksadlkslkdlsjdkjsakdjsakdjalkjdk
-                        jsaljdkjsadljksajdkjksajdkj
-                        sakjdkjsakjdkjaskldjlajsdkjaldjkasjdkjaskdjkasjdk
-                        ljskajdkjaskdjksajdlkjakdjakjsdkjlaj
-                        dkljasdkjsakjdjalskdjasjdljsdd
-                        asdkjkdjskdjajdjhaskdhjashdjkhasdkjhaksdjs
-                        dsjdhjsdhkahdjkhasjdkhsajdhkjsahdjkhakdhjahdkjahsjhskajhd
-                        dadadjahdhadhkjahdjahdkjhajdhhuhahdbbchacjhacha sahuahsdjhahjd
+                        Beyond great coffee, [Coffee Shop Name] is a space built around community. We host open mic
+                        nights, art pop-ups, and local vendor showcases to support and celebrate the talent around us.
+                        From the aroma of fresh espresso to the sound of meaningful conversations, everything here is
+                        crafted to create an experience that stays with you long after the last sip.
                     </p>
                 </div>
             </div>
         </div>
         <div id="tabs-bottom">
-            <a href="#">FEEDBACK</a>
-            <a href="#">WEATHER</a>
+            <a href="feedback.html">FEEDBACK</a>
+            <a href="weather.html">WEATHER</a>
         </div>
     </body>
 </html>
