--- a/giraffe.html
+++ b/giraffe.html
@@ -48,8 +48,8 @@
             </div>
         </div>
         <div id="tabs-bottom">
-            <a href="#">FEEDBACK</a>
-            <a href="#">WEATHER</a>
+            <a href="feedback.html">FEEDBACK</a>
+            <a href="weather.html">WEATHER</a>
         </div>
     </body>
 </html>
