--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <img src="images/map.png" width 100% />
         </div>
         <div id="tabs-bottom">
-            <a href="#">FEEDBACK</a>
-            <a href="#">WEATHER</a>
+            <a href="feedback.html">FEEDBACK</a>
+            <a href="weather.html">WEATHER</a>
         </div>
     </body>
 </html>
