--- a/places.html
+++ b/places.html
@@ -25,37 +25,37 @@
 					<img class="right" src="images/next-arrow.png" />
 					<img src="images/coffee-shop-tn.png" />
 					<h3>COFFEE SHOP</h3>
-					<p>Catch an educational and entertaining event</p>
+					<p>We take pride in curating a menu that balances classic coffee</p>
 				</a>
 				<a class="infobox" href="pizzashop.html">
 					<img class="right" src="images/next-arrow.png" />
 					<img src="images/pizza-shop-tn.png" />
 					<h3>MOS PIZZA</h3>
-					<p>Catch an educational and entertaining event</p>
+					<p>MOS PIZZA is a proudly local pizzeria known for serving up delicious</p>
 				</a>
 				<a class="infobox" href="lostforest.html">
 					<img class="right" src="images/next-arrow.png" />
 					<img src="images/lost-forest-tn.png" />
 					<h3>LOST FOREST</h3>
-					<p>Catch an educational and entertaining event</p>
+					<p>LOST FOREST is a creative collective rooted in the spirit of exploration</p>
 				</a>
 				<a class="infobox" href="monkeytrail.html">
 					<img class="right" src="images/next-arrow.png" />
 					<img src="images/monkey-trail-tn.png" />
 					<h3>MONKEY TRAIL</h3>
-					<p>Catch an educational and entertaining event</p>
+					<p>Monkey Trail is a dynamic brand rooted in creativityt</p>
 				</a>
 				<a class="infobox" href="resturant.html">
 					<img class="right" src="images/next-arrow.png" />
 					<img src="images/restaurant-tn.png" />
 					<h3>OUTSIDE RESTURANT</h3>
-					<p>Catch an educational and entertaining event</p>
+					<p>more than just a place to eat—it's an experience crafted under the open sky.</p>
 				</a>
 			</div>
 		</div>
 		<div id="tabs-bottom">
-			<a href="#">FEEDBACK</a>
-			<a href="#">WEATHER</a>
+			<a href="feedback.html">FEEDBACK</a>
+			<a href="weather.html">WEATHER</a>
 		</div>
 	</body>
 </html>
