--- a/resturant.html
+++ b/resturant.html
@@ -17,45 +17,34 @@
         <div id="main">
             <div id="content">
                 <div id="info-box-full">
-                    <img src="images/outdoor_restaurant.jpg"/>
+                    <img src="images/outdoor_restaurant.jpg" />
                     <h3>OUTSIDE RESTURANT</h3>
                     <p>
-                        jkjljalkjkldajkdljsakdjkasjdkjslkdjsakldjksjadklja
-                        asakdlsklkdlkaskdlksadlkslkdlsjdkjsakdjsakdjalkjdkjsaljdkjsadl
-                        jksajdkjksajdkjsakjdkjsakjdkjaskldjlajsdkjaldjkasjdkjaskdjkasjd
-                        kljska
-                        jdkjaskdjksajdlkjakdjakjsdkjlajdkljasdkjsakjdjalskdjasjdljsdd
-                        asdkjkdjskdjajdjhaskdhjashdjkhasdkjhaksdjs
-                        dsjdhjsdhkahdjkhasjdkhsajdhkjsahdjkhakdhjahdkjahsjhskajhd
-                        dadadjahdhadhkjahdjahdkjhajdhhuhahdbbchacjhacha sahuahsdjhahjd
+                        OUTSIDE RESTAURANT is more than just a place to eat—it's an experience crafted under the open
+                        sky. Nestled in a vibrant and welcoming outdoor setting, we combine fresh air, flavorful dishes,
+                        and great company to create unforgettable moments. Whether you're joining us for a casual
+                        brunch, a sunset dinner, or a celebration with loved ones, OUTSIDE offers the perfect blend of
+                        nature and nourishment.
                     </p>
                     <p>
-                        jkjljalkjkldajkdljsakdjkasjdkjslkdjsakldjksjadklja
-                        asakdlsklkdlkaskdlksadlkslkdlsjdkjsakdjsakdjalkjdkjsaljdkjsadl
-                        jksajdkjksajdkjsakjdkjsakjdkjaskldjlajsdkjaldjkasjdkjaskdjkasjdk
-                        ljskajdkjaskdjksajdlkjakdjakjsdkjlajdkljasdkjsakjdjalskdjasjd
-                        ljsdd
-                        asdkjkdjskdjajdjhaskdhjashdjkhasdkjhaksdjs
-                        dsjdhjsdhkahdjkhasjdkhsajdhkjsahdjkhakdhjahdkjahsjhskajhd
-                        dadadjahdhadhkjahdjahdkjhajdhhuhahdbbchacjhacha sahuahsdjhahjd
+                        Our menu is inspired by global street food favorites, locally sourced ingredients, and a passion
+                        for seasonal freshness. Every plate tells a story—from wood-fired pizzas and smoky grilled meats
+                        to vegan delights and handcrafted beverages. At OUTSIDE, we believe in food that excites the
+                        palate while nourishing the soul, served in a laid-back atmosphere that encourages connection
+                        and joy.
                     </p>
                     <p>
-                        jkjljalkjkldajkdljsakdjkasjdkjslkdjsakldjksjadklja
-                        asakdlsklkdlkaskdlksadlkslkdlsjdkjsakdjsakdjalkjdk
-                        jsaljdkjsadljksajdkjksajdkj
-                        sakjdkjsakjdkjaskldjlajsdkjaldjkasjdkjaskdjkasjdk
-                        ljskajdkjaskdjksajdlkjakdjakjsdkjlaj
-                        dkljasdkjsakjdjalskdjasjdljsdd
-                        asdkjkdjskdjajdjhaskdhjashdjkhasdkjhaksdjs
-                        dsjdhjsdhkahdjkhasjdkhsajdhkjsahdjkhakdhjahdkjahsjhskajhd
-                        dadadjahdhadhkjahdjahdkjhajdhhuhahdbbchacjhacha sahuahsdjhahjd
+                        Founded with a love for community and open-air dining, OUTSIDE RESTAURANT is committed to
+                        sustainability, inclusivity, and excellent service. Whether you're seated under twinkling string
+                        lights or catching some sun in the garden, you’ll always feel at home here. Come hungry, leave
+                        happy—and always enjoy the view.
                     </p>
                 </div>
             </div>
         </div>
         <div id="tabs-bottom">
-            <a href="#">FEEDBACK</a>
-            <a href="#">WEATHER</a>
+            <a href="feedback.html">FEEDBACK</a>
+            <a href="weather.html">WEATHER</a>
         </div>
     </body>
 </html>
