--- a/weather.html
+++ b/weather.html
@@ -65,7 +65,7 @@
             </div>
         </div>
         <div id="tabs-bottom">
-            <a href="#">FEEDBACK</a>
+            <a href="feedback.html">FEEDBACK</a>
             <a href="weather.html">WEATHER</a>
         </div>
     </body>
